# PyRust-ML

./: .gitignore  ADVANCED_ANALYTICS_REAL_DATA_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  FORCE_REBUILD_v2.py  HOW_TO_RUN.md  KAGGLE_INTEGRATION_COMPLETE.md  KAGGLE_INTEGRATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  RESUME_READY.md  app.py  cloud_check.py  compile_rust.bat  pyproject.toml  requirements.txt  run_dashboard.bat  test_advanced_analytics_real_data.py  test_complete_system.py  test_kaggle_datasets.py  test_kaggle_simple.py  test_quick.py
.github/: copilot-instructions.md
dashboard/: app.py  enhanced_app.py  professional_app.py
dashboard/scripts/: dashboard.js
dashboard/styles/: professional.css
examples/: demo.ipynb
pyrustml/: __init__.py  benchmarks.py  dataset_manager.py  enhanced_benchmarks.py  fallback.py  gpu_acceleration.py  kmeans.py  linear_regression.py  optimized.py  svm.py  true_performance_comparison.py
rust_src/: Cargo.toml  Cargo_optimized.toml
rust_src/src/: kmeans.rs  lib.rs  lib_simple.rs  linear_regression.rs  optimized_kmeans.rs  optimized_linear_regression.rs  svm.rs
tests/: test_models.py
